--- a/src/modules/Filter/filter.module.scss
+++ b/src/modules/Filter/filter.module.scss
@@ -2,121 +2,9 @@
 @use "@scss/media" as *;
 
 .filter {
-	&__form {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		gap: 32px;
-		flex-wrap: wrap;
-	}
 
-	&__group {
-		display: flex;
-		flex-wrap: wrap;
-		border: 0;
-		padding: 0;
-		margin: 0;
-		gap: 12px;
 
-		&_choices {
-			gap: 64px;
 
-			@include mobile {
-				gap: 40px;
-			}
-		}
-	}
-
-	&__radio {
-		appearance: none;
-		position: absolute;
-	}
-
-	&__label {
-		padding: 16px;
-		padding-left: 60px;
-		cursor: pointer;
-		border-radius: 300px;
-		background-color: $white;
-		color: $dark;
-		background-position: center left 16px;
-		background-repeat: no-repeat;
-		background-size: 40px;
-		min-height: 72px;
-		display: flex;
-		align-items: center;
-
-		@include mobile {
-			padding: 10px 12px 10px 40px;
-			background-position: center left 12px;
-			background-size: 24px;
-			min-height: 40px;
-		}
-
-		&_flower {
-			background-image: url("/img/flowers.png");
-		}
-
-		&_toys {
-			background-image: url("/img/bear-toy.png");
-		}
-
-		&_postcard {
-			background-image: url("/img/postcard.png");
-		}
-
-		&:hover {
-			background-color: $orange;
-		}
-	}
-
-	&__radio:focus-visible + &__label {
-		outline: 2px solid $orange;
-		outline-offset: 5px;
-	}
-
-	&__radio:checked + &__label {
-		background-color: $light-orange;
-	}
-
-	&__choices {
-		position: relative;
-	}
-
-	&__select {
-		display: flex;
-		align-items: center;
-		gap: 8px;
-
-		&:after {
-			content: "";
-			width: 8px;
-			height: 8px;
-			background: url("/img/arrow.svg") no-repeat center/contain;
-		}
-	}
-
-	&__price {
-		border: 0;
-		padding: 0;
-		margin: 0;
-		display: flex;
-		gap: 8px;
-	}
-
-	&__choices-box {
-		position: absolute;
-		top: calc(100% + 20px);
-		left: 50%;
-		transform: translateX(-50%);
-		background-color: $white;
-		padding: 24px;
-		border-radius: 12px;
-
-		&_type {
-			padding: 16px;
-		}
-	}
 
 	&__input-price {
 		border-radius: 32px;
@@ -131,8 +19,7 @@
 		}
 	}
 
-	&__type-list {
-	}
+
 
 	&__type-item {
 		margin-bottom: 8px;
@@ -154,3 +41,121 @@
 		}
 	}
 }
+
+.filterForm {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 32px;
+		flex-wrap: wrap;
+	}
+
+.filterGroup {
+		display: flex;
+		flex-wrap: wrap;
+		border: 0;
+		padding: 0;
+		margin: 0;
+		gap: 12px;
+
+	}
+
+.filterGroupChoices{
+    gap: 64px;
+    	@include mobile {
+            gap: 40px;
+    	}
+    }
+
+.filterRadio {
+ 		appearance: none;
+ 		position: absolute;
+ 	}
+
+.filterLabel {
+ 		padding: 16px;
+ 		padding-left: 60px;
+ 		cursor: pointer;
+ 		border-radius: 300px;
+ 		background-color: $white;
+ 		color: $dark;
+ 		background-position: center left 16px;
+ 		background-repeat: no-repeat;
+ 		background-size: 40px;
+ 		min-height: 72px;
+ 		display: flex;
+ 		align-items: center;
+
+ 		@include mobile {
+ 			padding: 10px 12px 10px 40px;
+ 			background-position: center left 12px;
+ 			background-size: 24px;
+ 			min-height: 40px;
+ 		}
+
+ 	}
+
+.filterLabelFlower {
+ 			background-image: url("/img/flowers.png");
+ 		}
+
+.filterLabelToys {
+ 			background-image: url("/img/bear-toy.png");
+ 		}
+
+.filterLabelPostcard {
+ 			background-image: url("/img/postcard.png");
+ 		}
+
+.filterLabel:hover{
+    	background-color: $orange;
+ }
+
+
+.filterRadio:focus-visible + .filterLabel {
+		outline: 2px solid $orange;
+		outline-offset: 5px;
+	}
+
+.filterRadio:checked + .filterLabel {
+		background-color: $light-orange;
+	}
+
+.filterChoices {
+		position: relative;
+}
+
+.filterSelect {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+
+		&:after {
+			content: "";
+			width: 8px;
+			height: 8px;
+			background: url("/img/arrow.svg") no-repeat center/contain;
+		}
+	}
+
+.filterPrice {
+		border: 0;
+		padding: 0;
+		margin: 0;
+		display: flex;
+		gap: 8px;
+}
+
+.filterChoicesBox {
+		position: absolute;
+		top: calc(100% + 20px);
+		left: 50%;
+		transform: translateX(-50%);
+		background-color: $white;
+		padding: 24px;
+		border-radius: 12px;
+    }
+
+.filterChoicesBoxType{
+    padding: 16px;
+  }
