--- a/src/modules/Filter/filter.module.scss
+++ b/src/modules/Filter/filter.module.scss
@@ -2,47 +2,7 @@
 @use "@scss/media" as *;
 
 .filter {
-
-
-
-
-	&__input-price {
-		border-radius: 32px;
-		padding: 8px 16px;
-		width: 110px;
-		height: 40px;
-		background-color: $bg;
-		border: none;
-
-		@include mobile {
-			width: 80px;
-		}
-	}
-
-
-
-	&__type-item {
-		margin-bottom: 8px;
-
-		&:last-child {
-			margin-bottom: 0;
-		}
-	}
-
-	&__type-button {
-		white-space: nowrap;
-
-		&:hover {
-			color: $light-orange;
-		}
-
-		&_active {
-			color: $orange;
-		}
-	}
-}
-
-.filterForm {
+	.filterForm {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -50,82 +10,79 @@
 		flex-wrap: wrap;
 	}
 
-.filterGroup {
+	.filterGroup {
 		display: flex;
 		flex-wrap: wrap;
 		border: 0;
 		padding: 0;
 		margin: 0;
 		gap: 12px;
-
 	}
 
-.filterGroupChoices{
-    gap: 64px;
-    	@include mobile {
-            gap: 40px;
-    	}
-    }
+	.filterGroupChoices {
+		gap: 64px;
+		@include mobile {
+			gap: 40px;
+		}
+	}
 
-.filterRadio {
- 		appearance: none;
- 		position: absolute;
- 	}
+	.filterRadio {
+		appearance: none;
+		position: absolute;
+	}
 
-.filterLabel {
- 		padding: 16px;
- 		padding-left: 60px;
- 		cursor: pointer;
- 		border-radius: 300px;
- 		background-color: $white;
- 		color: $dark;
- 		background-position: center left 16px;
- 		background-repeat: no-repeat;
- 		background-size: 40px;
- 		min-height: 72px;
- 		display: flex;
- 		align-items: center;
+	.filterLabel {
+		padding: 16px;
+		padding-left: 60px;
+		cursor: pointer;
+		border-radius: 300px;
+		background-color: $white;
+		color: $dark;
+		background-position: center left 16px;
+		background-repeat: no-repeat;
+		background-size: 40px;
+		min-height: 72px;
+		display: flex;
+		align-items: center;
 
- 		@include mobile {
- 			padding: 10px 12px 10px 40px;
- 			background-position: center left 12px;
- 			background-size: 24px;
- 			min-height: 40px;
- 		}
+		@include mobile {
+			padding: 10px 12px 10px 40px;
+			background-position: center left 12px;
+			background-size: 24px;
+			min-height: 40px;
+		}
+	}
 
- 	}
+	.filterLabelFlower {
+		background-image: url("/img/flowers.png");
+	}
 
-.filterLabelFlower {
- 			background-image: url("/img/flowers.png");
- 		}
+	.filterLabelToys {
+		background-image: url("/img/bear-toy.png");
+	}
 
-.filterLabelToys {
- 			background-image: url("/img/bear-toy.png");
- 		}
+	.filterLabelPostcard {
+		background-image: url("/img/postcard.png");
+	}
 
-.filterLabelPostcard {
- 			background-image: url("/img/postcard.png");
- 		}
+	.filterLabel:hover {
+		background-color: $orange;
+	}
 
-.filterLabel:hover{
-    	background-color: $orange;
- }
-
-
-.filterRadio:focus-visible + .filterLabel {
+	.filterRadio:focus-visible + .filterLabel {
 		outline: 2px solid $orange;
 		outline-offset: 5px;
 	}
 
-.filterRadio:checked + .filterLabel {
+	.filterRadio:checked + .filterLabel {
 		background-color: $light-orange;
 	}
 
-.filterChoices {
+	.filterChoices {
 		position: relative;
-}
+	}
 
-.filterSelect {
+	.filterSelect {
 		display: flex;
 		align-items: center;
 		gap: 8px;
@@ -138,24 +95,43 @@
 		}
 	}
 
-.filterPrice {
+	.filterPrice {
 		border: 0;
 		padding: 0;
 		margin: 0;
 		display: flex;
 		gap: 8px;
+	}
+
+	.filterInputPrice {
+		border-radius: 32px;
+		padding: 8px 16px;
+		width: 110px;
+		height: 40px;
+		background-color: $bg;
+		border: none;
+
+		@include mobile {
+			width: 80px;
+		}
+	}
+
+	.filterTypeItem {
+		margin-bottom: 8px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	.filterTypeButton {
+		white-space: nowrap;
+
+		&:hover {
+			color: $light-orange;
+		}
+
+		&_active {
+			color: $orange;
+		}
+	}
 }
-
-.filterChoicesBox {
-		position: absolute;
-		top: calc(100% + 20px);
-		left: 50%;
-		transform: translateX(-50%);
-		background-color: $white;
-		padding: 24px;
-		border-radius: 12px;
-    }
-
-.filterChoicesBoxType{
-    padding: 16px;
-  }
